--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,1 +1,28 @@
 site_name: Cookbook
+
+theme:
+  name: material
+  palette:
+    - scheme: default
+      toggle:
+        icon: material/brightness-7
+        name: 'Switch to dark mode'
+    - scheme: slate
+      toggle:
+        icon: material/brightness-4
+        name: 'Switch to like mode'
+  features:
+    - navigation.tabs
+
+markdown_extensions:
+  - attr_list
+  - pymdownx.emoji:
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
+  - admonition
+  - pymdownx.details
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
